--- a/TODO.txt
+++ b/TODO.txt
@@ -1,30 +1,18 @@
 misc
-	zobrist hashing
-		initial calculation
-		make move
-		undo move
-	uci interface
-		uci
-		setoption
-			Hash
-			Threads
-		isready
-		ucinewgame
+	uci
 		position
 		go
-		stop
-		quit
 
 bot
 	pvs
 	lmr
 	check extension
 	move sorting
-		previous best move
-		transposition table move
+		pv lines?
 	multithreading
-
-transposition table
-	storing
-	lookups
-	multithreading safe
+		main thread that waits for responses from the uci interface and the worker threads
+		worker threads
+		make the TT multithreading safe
+		uci
+			setoption Threads
+			stop
